--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,10 @@
     <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
 
     <main>
+      <ul>
+        <li><a href="./1-timer.html">Timer</a></li>
+        <li><a href="./2-snackbar.html">Snackbar</a></li>
+      </ul>
       <!-- Loads the specified .html file -->
       <load src="./partials/vite-promo.html" />
       <load src="./partials/badges.html" />
@@ -18,6 +22,5 @@
 
     <load src="./partials/footer.html" />
 
-    <script type="module" src="./main.js"></script>
   </body>
 </html>
